Fix for invisible table headers and inputs (#187)

--- a/src/main/gui/sass/_primefaces.sass
+++ b/src/main/gui/sass/_primefaces.sass
@@ -42,6 +42,9 @@ table
     vertical-align: top !important
     padding: 10px !important
 
+    &.ui-state-default
+      border-color: #25323a !important
+
     input
       background-color: #25323A !important
       color: #fff !important
@@ -53,11 +56,6 @@ table
     &.ui-datatable-scrollable-theadclone
       th
         padding: 0 !important
-
-.table-student-grades
-  th
-    &.ui-state-default
-      border: none !important
 
 .ui-messages-info,
 .ui-message-info
@@ -131,38 +129,39 @@ table
     border-radius: 0
 
 .ui-tabs
-  padding:  0
+  padding:  0 !important
   border: none
   background-color: transparent
 
   .ui-tabs-panel
-    padding:  1em 0 0 !important
+    padding:  0 0 0 !important
 
   .ui-widget-header.ui-tabs-nav
     background-color: transparent
     border-bottom: 1px solid #ddd
 
-  .ui-state-default
-    border: none !important
-    background: transparent !important
+  .ui-tabs-nav
+    & > .ui-state-default
+      border: none !important
+      background: transparent !important
 
-    a
-      color: #43cc9e !important
-      padding: 10px 15px !important
+      a
+        color: #43cc9e !important
+        padding: 10px 15px !important
 
-      &:hover
-        text-decoration: underline
+        &:hover
+          text-decoration: underline
 
-  .ui-tabs-selected
-    border: 1px solid #ddd !important
-    border-bottom: none !important
-    padding: 0 !important
-    border-radius: 0 !important
-    background: #fff !important
+    & > .ui-tabs-selected
+      border: 1px solid #ddd !important
+      border-bottom: none !important
+      padding: 0 !important
+      border-radius: 0 !important
+      background: #fff !important
 
-    a
-      padding: 10px 15px !important
-      color: #000 !important
+      a
+        padding: 10px 15px !important
+        color: #000 !important
 
 .ui-fileupload-choose
   .ui-icon
